--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,10 @@
 
 buildscript {
     ext {
+        // for notifications
+        googlePlayServicesVersion = "+" // default: "+"
+        firebaseVersion = "+" // default: "+"
+
         buildToolsVersion = "28.0.3"
         minSdkVersion = 16
         compileSdkVersion = 28
