--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/push-notification-ios": "^1.0.4",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-webview": "^8.0.2"
+    "react-native-push-notification": "^3.1.9",
+    "react-native-webview": "^8.0.2",
+    "react-redux": "^7.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
