--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/push-notification-ios": "^1.0.4",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-background-fetch": "^3.0.4",
+    "react-native-gesture-handler": "^1.5.3",
     "react-native-push-notification": "^3.1.9",
+    "react-native-safe-area-context": "^0.6.2",
     "react-native-webview": "^8.0.2",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^2.0.15",
     "react-redux": "^7.1.3"
   },
   "devDependencies": {
